In the B_MOUSE_MOVED message, "where" is supposed to be in window coordinates while "be:view_where" is in view coordinates. We made the mistake of having them both be in view coordinates. This caused a problem for example in Vision. (#2460)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@26491 a95241bf-73f2-0310-859d-f6bbb57e9c96